Panel de Exame.
Signed-off-by: Ariel Tadeu da Silva <silva.ariel2013@gmail.com>